--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               </p>
               <p>
                 At A*STAR I've been working in <a href="https://www.linkedin.com/jobs/view/scientist-cheem-at-a-star-agency-for-science-technology-and-research-680514008/?originalSubdomain=sg">CHEEM</a>.
-                I did my Master at <a href="https://www.eng.nus.edu.sg/ece/">National University of Singapore</a>, where I was advised by <a href="http://www.cs.berkeley.edu/~malik/">Sam Shuzhi Ge</a>. I did my bachelors at the <a href="http://cs.toronto.edu">Hong Kong Polytechnic University</a>.
+                I did my Master at <a href="https://www.eng.nus.edu.sg/ece/">National University of Singapore</a>. I did my bachelors at the <a href="http://www.eie.polyu.edu.hk/home/index.html">Hong Kong Polytechnic University</a>.
               </p>
               <p style="text-align:center">
                 <a href="mailto:jonbarron@gmail.com">Email</a> &nbsp/&nbsp
