--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 I did my Master at <a href="https://www.eng.nus.edu.sg/ece/">National University of Singapore</a>. I did my bachelors at the <a href="http://www.eie.polyu.edu.hk/home/index.html">Hong Kong Polytechnic University</a>.
               </p>
               <p style="text-align:center">
-                <a href="mailto:jonbarron@gmail.com">Email</a> &nbsp/&nbsp
-                <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp
+                <a href="mailto:wty00678@gmail.com">Email</a> &nbsp/&nbsp
+                <a href="data/Wang_Tianying_CV_v2.pdf">CV</a> &nbsp/&nbsp
                 <a href="data/JonBarron-bio.txt">Biography</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href="http://www.linkedin.com/in/jonathanbarron/"> LinkedIn </a>
