--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
               <p style="text-align:center">
                 <a href="mailto:wty00678@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="data/Wang_Tianying_CV_v2.pdf">CV</a> &nbsp/&nbsp
-                <a href="data/JonBarron-bio.txt">Biography</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp
-                <a href="http://www.linkedin.com/in/jonathanbarron/"> LinkedIn </a>
+                <a href="https://www.linkedin.com/in/tianying-wang-2004a2110/"> LinkedIn </a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
