--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               <br>
               <p style="text-align:right;font-size:small;">
 
-                <a href="https://cs.stanford.edu/~poole/">Thanks for the nice website designed by Jon Barron</a>
+                <a href="https://jonbarron.info/">Thanks for the nice website designed by Jon Barron</a>
               </p>
             </td>
           </tr>
