--- a/index.html
+++ b/index.html
@@ -71,64 +71,26 @@
               </script>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/1910.11336">
-                <papertitle>Handheld Mobile Photography in Very Low Light</papertitle>
+              <a href="">
+                <papertitle>Efficient Robotic Task Generalization Using Deep ModelFusion Reinforcement Learning</papertitle>
               </a>
               <br>
-              <a href="https://sites.google.com/site/orlylibaprofessional/">Orly Liba</a>,
-              <a href="https://scholar.google.com/citations?user=6PhlPWMAAAAJ">Kiran Murthy</a>,
-              <a href="https://ai.google/research/people/105312/">Yun-Ta Tsai</a>,
-              <a href="https://www.timothybrooks.com/">Timothy Brooks</a>,
-              <a href="https://people.csail.mit.edu/tfxue/">Tianfan Xue</a>,
-              <a href="https://scholar.google.com/citations?user=qgc_jY0AAAAJ">Nikhil Karnad</a>,
-              <a href="https://scholar.google.com/citations?user=BxqV_RsAAAAJ">Qiurui He</a>,
-              <strong>Jonathan T. Barron</strong>,
-              <a href="https://ai.google/research/people/105641/">Dillon Sharlet</a>,
-              <a href="http://www.geisswerks.com/">Ryan Geiss</a>,
-              <a href="https://people.csail.mit.edu/hasinoff/">Samuel W. Hasinoff</a>,
-              <a href="https://scholar.google.com/citations?user=2jXxOYQAAAAJ">Yael Pritch</a>,
-              <a href="http://graphics.stanford.edu/~levoy/">Marc Levoy</a>
+              <strong>Tianying Wang</strong>,
+              <a href="">Hao Zhang</a>,
+              <a href="">Wei Qi Toh</a>,
+              <a href="">Hongyuan Zhu</a>
+              <a href="">Cheston Tan</a>,
+              <a href="">Yan Wu</a>,
+              <a href="">Yong Liu</a>,
+              <a href="">Wei Jing</a>
               <br>
-              <em>SIGGRAPH Asia</em>, 2019
+              <em>IEEE ROBIO</em>, 2019
               <br>
               <p></p>
-              <p>By rethinking metering, white balance, and tone mapping, we can take pictures in places too dark for humans to see clearly.</p>
+              <p>In  this  paper,  we  propose  a  novel  algorithm  for  efficiently generalizing  the  robotic  task  learning  problem  to  a  new environment.</p>
             </td>
           </tr>
-          
-          <tr onmouseout="font_stop()" onmouseover="font_start()">
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <div class="two" id='font_image'><img src='images/font_after.png'></div>
-                <img src='images/font_before.png'>
-              </div>
-              <script type="text/javascript">
-                function font_start() {
-                  document.getElementById('font_image').style.opacity = "1";
-                }
 
-                function font_stop() {
-                  document.getElementById('font_image').style.opacity = "0";
-                }
-                font_stop()
-              </script>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/1910.00748">
-                <papertitle>A Deep Factorization of Style and Structure in Fonts</papertitle>
-              </a>
-              <br>
-              <a href="http://www.cs.cmu.edu/~asrivats/">Akshay Srivatsan</a>,
-              <strong>Jonathan T. Barron</strong>,
-              <a href="https://people.eecs.berkeley.edu/~klein/">Dan Klein</a>,
-              <a href="http://cseweb.ucsd.edu/~tberg/">Taylor Berg-Kirkpatrick</a>
-              <br>
-              <em>EMNLP</em>, 2019 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
-              <br>
-              <p></p>
-              <p>Variational auto-encoders can be used to disentangle a characters style from its content.</p>
-            </td>
-          </tr>
           
 
 
