--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
           <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <div class="two" id='nightsight_image'><img src='images/nightsight_after.jpg'></div>
-                <img src='images/nightsight_before.jpg'>
+                <div class="two" id='nightsight_image'><img src='images/DMF2.png'></div>
+                <img src='images/DMF2.png'>
               </div>
               <script type="text/javascript">
                 function nightsight_start() {
@@ -76,7 +76,7 @@
               </a>
               <br>
               <strong>Tianying Wang</strong>,
-              <a href="">Hao Zhang</a>,
+              <a href="https://isaacchanghau.github.io/">Hao Zhang</a>,
               <a href="">Wei Qi Toh</a>,
               <a href="">Hongyuan Zhu</a>
               <a href="">Cheston Tan</a>,
