--- a/index.html
+++ b/index.html
@@ -55,7 +55,47 @@
           <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <div class="two" id='nightsight_image'><img src='images/DMF2.png'></div>
+                <div class="two" id='aaai2020image'><img src='images/aaai2020.png'></div>
+
+              </div>
+              <script type="text/javascript">
+                function nightsight_start() {
+                  document.getElementById('nightsight_image').style.opacity = "1";
+                }
+
+                function nightsight_stop() {
+                  document.getElementById('nightsight_image').style.opacity = "0";
+                }
+                nightsight_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/pdf/1912.05099.pdf">
+                <papertitle>RoboCoDraw: Robotic Avatar Drawing with GAN-based Style Transfer and Time-efficient Path Optimization</papertitle>
+              </a>
+              <br>
+              <strong>Tianying Wang</strong>,
+                <a href="">Wei Qi Toh</a>,
+              <a href="https://isaacchanghau.github.io/">Hao Zhang</a>,
+              <a href="">Xiuchao Sui</a>,
+              <a href="">Shaohua Li</a>,
+              <a href="">Yong Liu</a>,
+              <a href="">Wei Jing</a>
+              <br>
+              <em>AAAI</em>, 2020
+              <br>
+              <p></p>
+              <p>The proposed RoboCoDraw system takes a real human face image as input, converts it to a stylized avatar, then draws it with a robotic arm.
+                  A core component in this system is the Avatar-GAN proposed by us, which generates a cartoon avatar face image from a real human face.</p>
+                <a href="https://github.com/Psyche-mia/Avatar-GAN">[Github Code]</a>
+            </td>
+
+          </tr>
+
+        <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='aaai2020_image'><img src='images/DMF2.png'></div>
                 <img src='images/DMF2.png'>
               </div>
               <script type="text/javascript">
@@ -77,7 +117,7 @@
               <strong>Tianying Wang</strong>,
               <a href="https://isaacchanghau.github.io/">Hao Zhang</a>,
               <a href="">Wei Qi Toh</a>,
-              <a href="">Hongyuan Zhu</a>
+              <a href="">Hongyuan Zhu</a>,
               <a href="">Cheston Tan</a>,
               <a href="">Yan Wu</a>,
               <a href="">Yong Liu</a>,
@@ -88,6 +128,7 @@
               <p></p>
               <p>In  this  paper,  we  propose  a  novel  algorithm  for  efficiently generalizing  the  robotic  task  learning  problem  to  a  new environment.</p>
             </td>
+
           </tr>
 
           
