--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='aaai2020image'><img src='images/aaai2020.png'></div>
-
+                <img src='images/aaai2020.png'>
               </div>
               <script type="text/javascript">
                 function nightsight_start() {
